# plstim

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  egl-anim.cc  hstim.cabal  lorenceau-experiment.cc  lorenceau-lines.cc  plstim.pro  plstim.qrc  test-egl.c
apps/simple-experiment/: simple-experiment.cc
doc/source/: conf.py  experiments.rst  index.rst  license.rst
doc/source/experiments/: definition.rst  pages.rst
hsrc/: PlStim.hs
lib/: displayer.cc  displayer.h  engine.cc  engine.h  experiment.cc  experiment.h  glwidget.h  plstim.h  qexperiment.cc  qexperiment.h  qmltypes.cc  qmltypes.h  random.h  setup.cc  setup.h  utils.cc  utils.h
plstim/: experiment.cc  experiment.h  plstim.h  setup.cc  setup.h  utils.h
qml/: Button.qml  IntInput.qml  SectionText.qml  Style.qml  TextParam.qml  ui.qml
src/: elcalibration.h  engine.cc  engine.h  eyelink.cc  glwidget.cc  glwidget.h  gui.cc  gui.h  main.cc  messagebox.cc  messagebox.h  plstim.rc  powermate.cc  powermate.h  qexperiment.cc  qexperiment.h  qswrappers.cc  qswrappers.h  qtypes.cc  qtypes.h  server.h  setup.cc  setup.h  stimwindow.cc  stimwindow.h  utils.cc  utils.h
src/client/: client.cc  client.h  client.pro
tests/: catch-tests.cc  test-experiment.cc
tests/experiments/: nop.qml
