Name:           hstim
Version:        0.0.1
Description:    Visual stimulus presentation framework.
License:        BSD3
License-file:   LICENSE
Author:         Émilien Tlapale
Maintainer:     emilien@tlapale.com
Build-type:     Simple
Cabal-version:  >=1.2

Library
  Build-depends:        base >= 3 && < 5
  Exposed-modules:      Science.HStim
  ghc-options:          -Wall
